deploy/istio-route/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-route-demo-server
spec:
  host: istio-route-demo-server
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        featureTag: v1
    - name: v2
      labels:
        featureTag: v2
