deploy/istio-route/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-istio-route-demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-istio-route-demo
spec:
  hosts:
    - "*"
  gateways:
    - spring-istio-route-demo-gateway
  http:
    - match:
        - uri:
            exact: /greet/http
      route:
        - destination:
            host: istio-route-demo-client
            port:
              number: 19090
